--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/dcdd89c74c.js" crossorigin="anonymous"></script>
     <title>Leaderboard</title>
 </head>
 <body>
-    <h1></h1>
+    <nav class="Container-fluid">
+        <div class="top-nav">
+            <div class="top-part">
+              <h2>A Web Page</h2>
+            </div>
+            <div class="bottom-part">
+              <i class="fa-solid fa-left-long fa-3x white"></i>
+              <i class="fa-solid fa-right-long white fa-3x"></i>
+              <i class="fa-solid fa-xmark fa-3x"></i>
+              <i class="fa-solid fa-house fa-2x white"></i>
+              <input type="text" placeholder="https://" class="http-input">
+              <div class="search-bar">
+              <input type='text' placeholder='Search...' id='search-text-input' class="curved-input"/><i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
