--- a/src/index.html
+++ b/src/index.html
@@ -24,5 +24,9 @@
             </div>
         </div>
     </nav>
+
+    <footer>
+        <section class="footer-down"></section>
+    </footer>
 </body>
 </html>
