Setup frame of the section

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,20 @@
             </div>
         </div>
     </nav>
-
+    <h1 class="page-title black">Leaderboard</h1>
+    <section class="content">
+        <div class="recent-scores black">
+            <h2>Recent scores</h2>
+            <button type="button">Refresh</button>
+            <ul></ul>
+        </div>
+        <div class="add-scores">
+            <h2 class="black">Add your score</h2>
+            <input type="text" placeholder="Your name">
+            <input type="number" placeholder="Your score">
+            <button type="button">Submit</button>
+        </div>
+    </section>
     <footer>
         <section class="footer-down"></section>
     </footer>
