--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,20 @@
     </nav>
     <h1 class="page-title black">Leaderboard</h1>
     <section class="content">
-        <div class="recent-scores black">
-            <h2>Recent scores</h2>
-            <button type="button">Refresh</button>
-            <ul></ul>
+        <div class="black">
+            <div class="recent-scores">
+                <h2>Recent scores</h2>
+                    <button type="button">Refresh</button>
+            </div>
+            <div>
+                <ul>
+                    <li>Name: 100</li>
+                    <li>Name: 20</li>
+                    <li>Name: 50</li>
+                    <li>Name: 78</li>
+                    <li>Name: 12.5</li>
+                </ul>
+            </div>
         </div>
         <div class="add-scores">
             <h2 class="black">Add your score</h2>
