Make add.js, refresh,js and api.js modules

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                     <button type="button">Refresh</button>
             </div>
             <div>
-                <ul>
+                <ul id="score-table">
                     <li>Name: 100</li>
                     <li>Name: 20</li>
                     <li>Name: 50</li>
