--- a/src/index.html
+++ b/src/index.html
@@ -13,23 +13,20 @@
         <div class="black">
             <div class="recent-scores">
                 <h2>Recent scores</h2>
-                    <button type="button">Refresh</button>
+                    <button type="button" id="refresh-btn">Refresh</button>
             </div>
             <div>
-                <ul id="score-table">
-                    <li>Name: 100</li>
-                    <li>Name: 20</li>
-                    <li>Name: 50</li>
-                    <li>Name: 78</li>
-                    <li>Name: 12.5</li>
-                </ul>
+                <p class="message">Please, click on 'Refresh' to see the latest scores</p>
+                <ul id="score-table"></ul>
             </div>
         </div>
         <div class="add-scores">
             <h2 class="black">Add your score</h2>
-            <input type="text" placeholder="Your name">
-            <input type="number" placeholder="Your score">
-            <button type="button">Submit</button>
+            <form method="post">
+                <input type="text" name="name" id="name" placeholder="Your name">
+                <input type="number" name="score" id="score" placeholder="Your score">
+                <button type="button" id="submit-btn">Submit</button>
+            </form>
         </div>
     </section>
 </body>
